syntax = "proto3";
package IRacingTools.Models;

message TrackMetadata {
  uint32 id = 1;
  string name = 2;

  string version = 3;
}